{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 119,
  "lineage": "c22547b2-dd75-b439-61f0-e77d060d12bf",
  "resources": [
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:971424464532:loadbalancer/terra-elb",
            "availability_zones": [
              "us-west-1a",
              "us-west-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-elb-2102335861.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "instances": [
              "i-0b866caae1c0dd131",
              "i-0f8924d6a4a7c0fd3"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-075f0bc7895193571"
            ],
            "source_security_group": "971424464532/allow_http",
            "source_security_group_id": "sg-075f0bc7895193571",
            "subnets": [
              "subnet-0cc1d6bc65626bec1",
              "subnet-0dbad5346e81f5442"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "tags_all": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.instance_provisioning.aws_instance.webservers",
            "module.instance_provisioning.aws_security_group.webservers",
            "module.instance_provisioning.aws_subnet.public",
            "module.instance_provisioning.aws_vpc.terra_vpc",
            "module.instance_provisioning.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0303cc201280f9277",
            "arn": "arn:aws:ec2:us-west-1:971424464532:instance/i-0b866caae1c0dd131",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b866caae1c0dd131",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d6dd46507d43c3a",
            "private_dns": "ip-10-20-1-120.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.120",
            "public_ip": "54.215.209.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01edbffe2c4695b1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-075f0bc7895193571"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc1d6bc65626bec1",
            "tags": {
              "Name": "Server-0"
            },
            "tags_all": {
              "Name": "Server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075f0bc7895193571"
            ]
          },
          "dependencies": [
            "module.instance_provisioning.aws_security_group.webservers",
            "module.instance_provisioning.aws_subnet.public",
            "module.instance_provisioning.aws_vpc.terra_vpc",
            "module.instance_provisioning.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0303cc201280f9277",
            "arn": "arn:aws:ec2:us-west-1:971424464532:instance/i-0f8924d6a4a7c0fd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8924d6a4a7c0fd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d1c7e5237fa3798",
            "private_dns": "ip-10-20-2-62.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.2.62",
            "public_ip": "13.56.232.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05935b8f42fc3f653",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-075f0bc7895193571"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbad5346e81f5442",
            "tags": {
              "Name": "Server-1"
            },
            "tags_all": {
              "Name": "Server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-075f0bc7895193571"
            ]
          },
          "dependencies": [
            "module.instance_provisioning.aws_security_group.webservers",
            "module.instance_provisioning.aws_subnet.public",
            "module.instance_provisioning.aws_vpc.terra_vpc",
            "module.instance_provisioning.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:971424464532:internet-gateway/igw-0817c133831e1bf3a",
            "id": "igw-0817c133831e1bf3a",
            "owner_id": "971424464532",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0f9c9740e94d98ae4"
          },
          "dependencies": [
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:971424464532:route-table/rtb-01e0796900e8cfabf",
            "id": "rtb-01e0796900e8cfabf",
            "owner_id": "971424464532",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0817c133831e1bf3a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9c9740e94d98ae4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_provisioning.aws_internet_gateway.terra_igw",
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124ae5ed143f94ce",
            "route_table_id": "rtb-01e0796900e8cfabf",
            "subnet_id": "subnet-0cc1d6bc65626bec1"
          },
          "dependencies": [
            "module.instance_provisioning.aws_internet_gateway.terra_igw",
            "module.instance_provisioning.aws_route_table.public_rt",
            "module.instance_provisioning.aws_subnet.public",
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eca188d640fae80",
            "route_table_id": "rtb-01e0796900e8cfabf",
            "subnet_id": "subnet-0dbad5346e81f5442"
          },
          "dependencies": [
            "module.instance_provisioning.aws_internet_gateway.terra_igw",
            "module.instance_provisioning.aws_route_table.public_rt",
            "module.instance_provisioning.aws_subnet.public",
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:971424464532:security-group/sg-075f0bc7895193571",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075f0bc7895193571",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "971424464532",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f9c9740e94d98ae4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:971424464532:subnet/subnet-0cc1d6bc65626bec1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc1d6bc65626bec1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971424464532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1"
            },
            "tags_all": {
              "Name": "Subnet-1"
            },
            "vpc_id": "vpc-0f9c9740e94d98ae4"
          },
          "dependencies": [
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:971424464532:subnet/subnet-0dbad5346e81f5442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbad5346e81f5442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971424464532",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-2"
            },
            "tags_all": {
              "Name": "Subnet-2"
            },
            "vpc_id": "vpc-0f9c9740e94d98ae4"
          },
          "dependencies": [
            "module.instance_provisioning.aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_provisioning",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:971424464532:vpc/vpc-0f9c9740e94d98ae4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ea296fe3662c37f0",
            "default_route_table_id": "rtb-04743ae5d21427451",
            "default_security_group_id": "sg-0ab529b34806cdf3a",
            "dhcp_options_id": "dopt-091f8b4799fc58342",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9c9740e94d98ae4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04743ae5d21427451",
            "owner_id": "971424464532",
            "tags": {
              "Name": "TerraVPC"
            },
            "tags_all": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}